BUG FIX: 3, 4, 5 (mouseleave, titleCont.clear, wrapp ellipsis) from todo list in toDo.js.

--- a/static/geoai/css/style.css
+++ b/static/geoai/css/style.css
@@ -54,6 +54,14 @@ h1, h2, h3, h4, h5, h6 {
     background-color: var(--secondary-color) !important;
 }
 
+.show-ellipsis {
+    display: inline-block;
+}
+
+.hide-ellipsis {
+    display: none;
+}
+
 /* Loading animation for answer's container */
 .skeleton-loading {
     opacity: 0.7;
